--- a/images/templates/images/image/detail.html
+++ b/images/templates/images/image/detail.html
@@ -7,7 +7,10 @@
 {% block content %}
 
     <h1>{{ image.title }}</h1>
-    <img src="{{ image.image.url }}" class="image-detail">
+    {% load thumbnail %}
+    <a href="{{ image.image.url }}">
+        <img src="{% thumbnail image.image.url 300x0 %}" class="image-detail"
+    </a>
     {% with total_likes=image.users_like.count %}
         <div class="image-info">
             <div>
