--- a/templates/base.html
+++ b/templates/base.html
@@ -34,5 +34,14 @@
     {% block content %}
     {% endblock %}
 </div>
+<script src="//cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+<script>
+    const csrftoken = Cookies.get('csrftoken')
+    document.addEventListener('DOMContentLoaded', (event) => {
+        // Блок шаблонов domready необходим для расширения шаблона base.html(обязательно)
+        {% block domready %}
+        {% endblock %}
+    })
+</script>
 </body>
 </html>
