Feat: Добавление бесконечной загрузки страниц изображений, с помощью JavaScript. Доступ к списку изображений из главного меню.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
+
 <html>
+
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link href="{% static "css/base.css" %}" rel="stylesheet">
 </head>
+
+
 <body>
 <div id="header">
     <span class="logo">Bookmarks</span>
@@ -14,7 +18,7 @@
                 <a href="{% url "dashboard" %}">My dashboard</a>
             </li>
             <li {% if section == "images" %}class="selected"{% endif %}>
-                <a href="#">Images</a>
+                <a href="{% url 'images:list' %}">Images</a>
             </li>
             <li {% if section == "people" %}class="selected"{% endif %}>
                 <a href="#">People</a>
@@ -34,6 +38,7 @@
     {% block content %}
     {% endblock %}
 </div>
+
 <script src="//cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
 <script>
     const csrftoken = Cookies.get('csrftoken')
@@ -43,5 +48,8 @@
         {% endblock %}
     })
 </script>
+
 </body>
+
+
 </html>
