--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -38,4 +38,11 @@
         </a>.
     </p>
 
+    <h2>What's happening</h2>
+    <div id="action-list">
+        {% for action in actions %}
+            {% include "actions/action/detail.html" %}
+        {% endfor %}
+    </div>
+
 {% endblock %}
